--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "4.0.0-alpha.6",
     "core-js": "2.4.1",
     "font-awesome": "4.7.0",
+    "moment": "2.18.1",
     "rxjs": "5.3.0",
     "zone.js": "0.8.9"
   },
